static/css/chat.css
.chat {
  margin-left: 300px;
  margin-right: 15px;
  height: 100%;
  border-radius: 10px 10px;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  --input-height: 50px;
}

.chat .inputwrap {
  margin-top: auto;
  margin-bottom: 40px;
}
.chat .fallback {
  position: absolute;
  color: gray;
  top: 50%;
  left: 50%;
  transform: translate(50%, -50%);
}

.messages {
  display: flex;
  flex-direction: column-reverse;
  padding: 5px 30px;
  overflow: scroll;
}
.message {
  margin-top: 10px;
  background: hsla(0, 0%, 0%, 0.295);
  padding: 10px 30px;
  width: fit-content;
  border-radius: 20px;
  width: 60%;
}
.chat .message .text {
  height: fit-content;
  margin-left: 2rem;
  line-break: anywhere;
  min-height: fit-content;
}

.message .time {
  display: flex;
  position: relative;
  gap: 10px;
  flex-wrap: wrap;
}
.time .full {
 white-space: nowrap;
}

.indicator.typing {
  position: sticky;
  left: 0;
  bottom: 0;
  display: flex;
  width: fit-content;
  gap: 8px;
}


.indicator.typing .dot {
  width: 8px;
  height: 8px;
  background: #888;
  border-radius: 50%;
  animation: blink 1.4s infinite linear;
  opacity: 0.3;
}

.indicator.typing .dot:nth-child(2) {
  animation-delay: 0.2s;
}

.indicator.typing .dot:nth-child(3) {
  animation-delay: 0.4s;
}

@keyframes blink {
  50% {
    opacity: 1;
    transform: scale(1.3);
  }

  100% {
    opacity: 0.3;
    transform: scale(1);
  }
}

